--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>HOME - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO - SMALL.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SMALL.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -291,7 +291,7 @@
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO - LARGE BLACK.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:90px;height:90px;"></a></li>
 	</ul><ul style="float:right;margin-top:5px;font-size:1.1em;"><div class="topnav" id="myTopnav">
 		<a class="active" href="index.html">home</a>
   		<a href="art gallery.html">art gallery</a>
@@ -349,6 +349,12 @@
 			54FJWt8YIA1IHjmUxuDxwi - Praise God
 			6SdQfCiVae1EXK1pQ6b92o - Rendezvous
 			3DK6m7It6Pw857FcQftMds - Runaway
+			2YSzYUF3jWqb9YP9VXmpjE - IDGAF
+			0O3TAouZE4vL9dM5SyxgvH - Fashion Killa
+			6n3HGiq4v35D6eFOSwqYuo - Teenage Fever
+			51EC3I1nQXpec4gDk0mQyP - 90210 (feat. Kacy Hill)
+			4mmkhcEm1Ljy1U9nwtsxUo - Through The Wire
+			1ofhfV90EnYhEr7Un2fWiv - Changes - 2Pac
 			-->
 		</div></div><br><br><br>
 		<div class="row">
@@ -359,14 +365,18 @@
 				I was tasked with a school project to design a future smartphone device. This is a faux Apple website I programmed for the then-upcoming iPhone 15 before its release. 
 				<br><br>The <i>real</i> iPhone 15 was just released and not many of my predictions were accurate.
 				<br><br><i>PHOTOS DO NOT BELONG TO ME!</i>
-				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/3DK6m7It6Pw857FcQftMds?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></h4>
+				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/0O3TAouZE4vL9dM5SyxgvH?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></h4>
 			<!--
+			0PyJRNmJvJJ5OmffwQf5we - State Fair
+			54FJWt8YIA1IHjmUxuDxwi - Praise God
+			6SdQfCiVae1EXK1pQ6b92o - Rendezvous
+			3DK6m7It6Pw857FcQftMds - Runaway
+			2YSzYUF3jWqb9YP9VXmpjE - IDGAF
+			0O3TAouZE4vL9dM5SyxgvH - Fashion Killa
+			6n3HGiq4v35D6eFOSwqYuo - Teenage Fever
+			51EC3I1nQXpec4gDk0mQyP - 90210 (feat. Kacy Hill)
+			4mmkhcEm1Ljy1U9nwtsxUo - Through The Wire
 			1ofhfV90EnYhEr7Un2fWiv - Changes - 2Pac
-			0PyJRNmJvJJ5OmffwQf5we - State Fair - Jack Harlow
-			54FJWt8YIA1IHjmUxuDxwi - Praise God - Ye
-			6SdQfCiVae1EXK1pQ6b92o - Rendezvous - Jack Harlow
-			3DK6m7It6Pw857FcQftMds - Runaway - Ye
-			2YSzYUF3jWqb9YP9VXmpjE - IDGAF - Drake
 			-->
 			</div>
 			<div class="column">
@@ -384,16 +394,19 @@
 				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;padding:10px;">
 					I received this Montigo Ace Bottle in Sunset Coral as a gift for my birthday this year and it’s such a game-changer, man..
 					<br><br> It keeps my water cool all day. I know this sounds like an advertisement, but I promise Montigo doesn’t even know I exist. I just really like their products.
-				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/1ofhfV90EnYhEr7Un2fWiv?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-				<br><br> P.S. All my posters are geared towards the future. I have no idea why. Apparently I’m a psychic.
+				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/51EC3I1nQXpec4gDk0mQyP?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 				</h4>
 			<!--
+			0PyJRNmJvJJ5OmffwQf5we - State Fair
+			54FJWt8YIA1IHjmUxuDxwi - Praise God
+			6SdQfCiVae1EXK1pQ6b92o - Rendezvous
+			3DK6m7It6Pw857FcQftMds - Runaway
+			2YSzYUF3jWqb9YP9VXmpjE - IDGAF
+			0O3TAouZE4vL9dM5SyxgvH - Fashion Killa
+			6n3HGiq4v35D6eFOSwqYuo - Teenage Fever
+			51EC3I1nQXpec4gDk0mQyP - 90210 (feat. Kacy Hill)
+			4mmkhcEm1Ljy1U9nwtsxUo - Through The Wire
 			1ofhfV90EnYhEr7Un2fWiv - Changes - 2Pac
-			0PyJRNmJvJJ5OmffwQf5we - State Fair - Jack Harlow
-			54FJWt8YIA1IHjmUxuDxwi - Praise God - Ye
-			6SdQfCiVae1EXK1pQ6b92o - Rendezvous - Jack Harlow
-			3DK6m7It6Pw857FcQftMds - Runaway - Ye
-			2YSzYUF3jWqb9YP9VXmpjE - IDGAF - Drake
 			-->
 			</div>
 		</div><br><br><br>
@@ -405,14 +418,18 @@
 				PERSADA is my school, SMK Taman Melawati’s, official magazine. It has been published annually for almost 28 years as of 2023. I’m proud to say that I’m a part of its Editorial Board, specifically the Graphic Design department. It’s been a blast working with our head editors: Wan, Zahra, Azeem, Dayana, as well as everyone else in this family.
 				<br><br> Look out for this year’s issue (28th Edition)!
 				<br><br><a href="https://quarterlypersada.wixsite.com/e-pinnaclesofficials" style="color:#2346F3;" target="_blank"><b>Click me to visit PERSADA’s quarterly magazine site!</b></a>
-				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/2YSzYUF3jWqb9YP9VXmpjE?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></h4>
+				<br><br><iframe style="border-radius:12px;margin-top:0;" src="https://open.spotify.com/embed/track/4mmkhcEm1Ljy1U9nwtsxUo?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></h4>
 			<!--
+			0PyJRNmJvJJ5OmffwQf5we - State Fair
+			54FJWt8YIA1IHjmUxuDxwi - Praise God
+			6SdQfCiVae1EXK1pQ6b92o - Rendezvous
+			3DK6m7It6Pw857FcQftMds - Runaway
+			2YSzYUF3jWqb9YP9VXmpjE - IDGAF
+			0O3TAouZE4vL9dM5SyxgvH - Fashion Killa
+			6n3HGiq4v35D6eFOSwqYuo - Teenage Fever
+			51EC3I1nQXpec4gDk0mQyP - 90210 (feat. Kacy Hill)
+			4mmkhcEm1Ljy1U9nwtsxUo - Through The Wire
 			1ofhfV90EnYhEr7Un2fWiv - Changes - 2Pac
-			0PyJRNmJvJJ5OmffwQf5we - State Fair - Jack Harlow
-			54FJWt8YIA1IHjmUxuDxwi - Praise God - Ye
-			6SdQfCiVae1EXK1pQ6b92o - Rendezvous - Jack Harlow
-			3DK6m7It6Pw857FcQftMds - Runaway - Ye
-			2YSzYUF3jWqb9YP9VXmpjE - IDGAF - Drake
 			-->
 			</div>
 				<div class="column">
@@ -424,11 +441,11 @@
 	
 	<br><br><br><h1 style="font-family:'owners-narrow',sans-serif;font-weight:700;font-style:normal;font-size:15vw!important;text-align:center;color:#F0B719;">PROLOGUE!</h1>
 		<h4 style="text-align:justify;text-justify:inter-word;padding:30px;">
-			Alright, first and foremost, I’d like to thank my parents. My mum and dad. Without them, I wouldn’t be here, both figuratively and literally. My mum is awesome. She inspires me to achieve greater heights and has been nurturing and guiding me since birth. She inspired me to display my talents here. She’s like a real life Barbie. My dad, on the other hand, is the coolest person on earth. He pays for my design softwares, haha, but he also does other amazing things. I get my music taste from him. He inspired me to take my passion for computer science further, and now that’s my ambition. I’d also like to give an honourable mention to my younger siblings, Azeem and Mysha, who give me constant unconditional support.
+			Alright, first and foremost, I’d like to thank my <i style="color:#F26697;">parents</i>. My mom and dad. Without them, I wouldn’t be here, both figuratively and literally. My mom inspires me to achieve greater heights and has been nurturing and guiding me since birth. She inspired me to display my talents here. My dad, on the other hand, is the coolest person on earth. He inspired me to take my passion for computer science further, and now that’s my ambition. I’d also like to give an honourable mention to my <i style="color:#F26697;">younger siblings</i>, Azeem and Mysha, who give me constant unconditional support.
 			<br><br>
-			I’d also like to thank Cikgu Rosila and Cikgu Hidayati. They’d been my Computer Science teachers throughout 2020-2022 and without them, this website wouldn’t exist, no joke. I wouldn’t know how to code at all without them. The idea of coding my own website wouldn’t even cross my mind without them. 
+			I’d also like to thank <i style="color:#F26697;">Cikgu Rosila</i> and <i style="color:#F26697;">Cikgu Hidayati</i>. They’d been my Computer Science teachers throughout 2020-2022 and without them, this website wouldn’t exist, no joke. I wouldn’t know how to code at all without them. The idea of coding my own website wouldn’t even cross my mind without them.
 			<br><br>
-			Last, but definitely not least, I’d like to express my appreciation towards my amazing friends. Adam, Afina, Airel, Airin, Aishah, Aleesya, Alisha, Aliya, Alyssa, Azeem, Cassandra, Hamzah, Lakhiesa, Lara, Ranjit, Syarafina, Uwais, just to name a few. You guys motivate me to embrace my talents and skills, and I truly wouldn’t be me without all of you.
+			Last, but definitely not least, I’d like to express my appreciation towards my amazing friends. <i style="color:#F26697;">Adam</i>, <i style="color:#F26697;">Afina</i>, <i style="color:#F26697;">Airel</i>, <i style="color:#F26697;">Airin</i>, <i style="color:#F26697;">Aishah</i>, <i style="color:#F26697;">Aleesya</i>, <i style="color:#F26697;">Alisha</i>, <i style="color:#F26697;">Aliya</i>, <i style="color:#F26697;">Azeem</i>, <i style="color:#F26697;">Cassandra</i>, <i style="color:#F26697;">Lakhiesa</i>, <i style="color:#F26697;">Lara</i>, <i style="color:#F26697;">Ranjit</i>, <i style="color:#F26697;">Syarafina</i>, <i style="color:#F26697;">Uwais</i>, and <i style="color:#F26697;">Ziqry</i>, just to name a few. You all motivate me to embrace my talents and skills, and I truly wouldn’t be me without all of you.
 		</h4>
 	
 	
@@ -437,8 +454,7 @@
 	<footer><br><br>
 		<a href="https://www.instagram.com/zaramysh/"><img src="instagram.png" style="width:30px;" alt="Instagram"></a>
 		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;" alt="TikTok"></a>
-		<p>© Zara Hapiz 2023</p>
-		<p style="font-size:0.7em;">Special thanks to Cikgu Hidayati and Cikgu Rosila, my Computer Science teachers, for helping this website come to life.</p>
+		<p>© Zara Hapiz 2024</p>
 		<embed><a href="https://acadooghostwriter.com/" style="opacity: 0; cursor:default;">https://acadooghostwriter.com</a> <script type="text/javascript" src="https://www.freevisitorcounters.com/auth.php?id=1d304043b64be22a3a5ba7a5a465aa9a5c4460cf"></script>
 <!--<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1019120/t/5"></script>-->
 	</footer>
