--- a/store.html
+++ b/store.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>STORE - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO - SMALL.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SMALL.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -283,7 +283,7 @@
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO - LARGE BLACK.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:90px;height:90px;"></a></li>
 	</ul><ul style="float:right;margin-top:5px;font-size:1.1em;"><div class="topnav" id="myTopnav">
 		<a href="index.html">home</a>
   		<a href="art gallery.html">art gallery</a>
@@ -314,6 +314,11 @@
 		
 
 		<h2>Posters</h2>
+	
+		<div class="gallery">
+		<img src="artwork/Teenage Fever - Drake.png" width="300px" alt="Teenage Fever - Drake">
+		<div class="container">Teenage Fever - Drake<br>
+		<a style="text-decoration:none;color:#0A0A0A;" href="https://drive.google.com/file/d/1ROo11vqnijM9UKF8Owjvo_sHjbpw7K2c/view?usp=sharing" target="_blank"><div class="button">download PNG</div></a></div></div>	
 	
 		<div class="gallery">
 		<img src="artwork/The College Dropout - Kanye West.png" width="300px" alt="The College Dropout - Kanye West">
@@ -434,7 +439,7 @@
 	<footer>
 		<a href="https://www.instagram.com/zaramysh/"><img src="instagram.png" style="width:30px;display:inline-block;" alt="Instagram"></a>
 		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;display:inline-block;" alt="TikTok"></a>
-		<p>© Zara Hapiz 2023</p>
+		<p>© Zara Hapiz 2024</p>
 	</footer>
 	<!--END OF FOOTER STUFF-->
 	<!--JAVASCRIPT SCRIPTS-->
