--- a/store.html
+++ b/store.html
@@ -521,8 +521,8 @@
 			<div class="price"><img src="STICKER-11.png" style="width:150px;" alt="free!"></div></div></div>
 	
 		<div class="gallery">
-		<img src="artwork/GHOST IN THE MACHINE.png" width="300px" alt="Ghost in the Machine poster">
-		<div class="container">Ghost in the Machine<br>
+		<img src="artwork/GHOST IN THE MACHINE.png" width="300px" alt="Ghost in the Machine - SZA">
+		<div class="container">Ghost in the Machine - SZA<br>
 		<a style="text-decoration:none;color:#0A0A0A;" href="https://drive.google.com/file/d/103zLfGLvLdlU6yTukoKOb28AELYxy8-M/view?usp=sharing" target="_blank"><div class="button">download PNG</div></a>
 			<div class="price"><img src="STICKER-11.png" style="width:150px;" alt="free!"></div></div></div>
 	
