--- a/index.html
+++ b/index.html
@@ -153,10 +153,11 @@
 	
 	
 		/* responsive stuff */
-		@media screen and (max-width: 650px) {
+		@media screen and (max-width: 830px) {
 		html {
 		}
 		body {
+			font-size: 4vw;
 			margin: 35px 10px;
 			overflow-x: hidden;
 			background-position: top center;
@@ -164,14 +165,8 @@
 		h1 {
 			font-size: 15vw;
 		}
-		h2 {
-			font-size: 6vw;
-		}
-		h3 {
-			font-size: 6vw;
-		}
 		h4, h5 {
-			font-size: 3vw;
+			font-size: 3.5vw;
 		}
 		ul {
 			width: 50%;
@@ -222,6 +217,9 @@
 		i {
 			width: "40vw";
 		}
+			.stickers {
+				margin-left: -9vw;
+			}
 	}
 	/*INDEX STUFF*/
 	
@@ -264,7 +262,7 @@
 		animation: spinny 50s linear infinite;
  		animation-play-state: running;
  		-webkit-animation-play-state: running;
- 		animation-direction: alternate;
+ 		animation-direction: normal;
 	}
 	@keyframes spinny {
 		0% {
@@ -290,7 +288,7 @@
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:120px;"></a></li>
 	</ul><ul style="float:right;margin-top:5px;font-size:1.1em;"><div class="topnav" id="myTopnav">
 		<a class="active" href="index.html">home</a>
   		<a href="art gallery.html">art gallery</a>
@@ -307,17 +305,17 @@
 	
 		<div class="stickers">
 			<img src="STICKER-01.png" alt="" style="width:30%;display:block;margin-left:auto;margin-right:auto;margin-top: 50px;transform:rotate(-7deg);">
-			<img src="STICKER-02.png" alt="" style="width:15%;z-index:1;position:relative;left:57vw;bottom:15vw;transform:rotate(9deg);overflow:visible;">
+			<img src="STICKER-02.png" alt="" style="width:15%;z-index:1;position:relative;left:57vw;bottom:15vw;transform:rotate(9deg);overflow:visible;animation:spinny 50s linear infinite;animation-play-state:running;-webkit-animation-play-state:running;animation-direction:reverse;">
 			<img src="STICKER-03.png" alt="" style="width:17%;z-index:1;position:relative;left:5vw;bottom:25vw;transform:rotate(4deg);overflow:visible;">
 			<img src="STICKER-04.png" alt="" style="width:17%;z-index:2;position:relative;left:-20vw;bottom:16vw;transform:rotate(-16deg);overflow:visible;">
 			<img src="STICKER-05.png" alt="" style="width:17%;z-index:2;position:relative;left:15vw;bottom:22vw;transform:rotate(7deg);overflow:visible;">
-			<img src="STICKER-06.png" alt="" style="width:17%;z-index:3;position:relative;left:8vw;bottom:14vw;transform:rotate(-3deg);overflow:visible;">
+			<img src="STICKER-06.png" alt="" style="width:17%;z-index:3;position:relative;left:5vw;bottom:14vw;transform:rotate(-3deg);overflow:visible;">
 			<img src="STICKER-07.png" alt="" style="width:17%;z-index:1;position:relative;left:75vw;bottom:45vw;transform:rotate(-2deg);overflow:visible;">
 			<img src="STICKER-08.png" alt="" style="width:17%;z-index:2;position:relative;left:-13vw;bottom:42vw;transform:rotate(-8deg);overflow:visible;">
 			<img src="STICKER-09.png" alt="" style="width:10%;z-index:4;position:relative;left:34vw;bottom:50vw;transform:rotate(-3deg);overflow:visible;">
 			<img src="STICKER-09.png" alt="" style="width:10%;z-index:4;position:relative;left:-16vw;bottom:34vw;transform:rotate(11deg);overflow:visible;">
-			<img src="STICKER-10.png" alt="" style="width:10%;z-index:4;position:relative;left:-50vw;bottom:33vw;transform:rotate(26deg);overflow:visible;">
-			<img src="STICKER-10.png" alt="" style="width:10%;z-index:4;position:relative;left:21vw;bottom:30vw;transform:rotate(11deg);overflow:visible;">
+			<img src="STICKER-10.png" alt="" style="width:10%;z-index:4;position:relative;left:-50vw;bottom:33vw;transform:rotate(26deg);overflow:visible;animation:spinny 10s linear infinite;animation-play-state:running;-webkit-animation-play-state:running;animation-direction:normal;">
+			<img src="STICKER-10.png" alt="" style="width:10%;z-index:4;position:relative;left:17vw;bottom:40vw;transform:rotate(11deg);overflow:visible;animation:spinny 10s linear infinite;animation-play-state:running;-webkit-animation-play-state:running;animation-direction:normal;">
 		</div>
 	
 		<h1 style="margin-top:-30vw;">
